--- a/scss/_themes/_default.scss
+++ b/scss/_themes/_default.scss
@@ -1,16 +1,16 @@
 @import "material";
 @import "lia";
 
-$fg: material-color('grey', '50');
-$bg: material-color('grey', '900');
+$fg: material-color('grey', '900');
+$bg: material-color('grey', '50');
 
 $theme: (
     text: $fg,
     text-inv: $bg,
     background: $bg,
     background-inv: $fg,
-    primary: material-color('blue', '500'),
-    secondary: material-color('purple', '500'),
+    primary: material-color('indigo', '500'),
+    secondary: material-color('blue', '500'),
     success: material-color('green', '500'),
     info: material-color('blue', '500'),
     warning: material-color('yellow', '500'),
@@ -18,4 +18,4 @@ $theme: (
     highlight-weight: normal,
 );
 
-html, body { @include lia($theme, dark); }
+@include create-theme($theme, default);
