--- a/scss/_themes/_purple.scss
+++ b/scss/_themes/_purple.scss
@@ -7,10 +7,10 @@ $bg: material-color('grey', '50');
 $theme: (
     text: $fg,
     text-inv: $bg,
-    background: $bg,
-    background-inv: $fg,
-    primary: material-color('blue', '500'),
-    secondary: material-color('purple', '500'),
+    background: material-color('deep-purple', '500'),
+    background-inv: material-color('blue-grey', '900'),
+    primary: material-color('purple', '500'),
+    secondary: material-color('pink', '500'),
     success: material-color('green', '500'),
     info: material-color('blue', '500'),
     warning: material-color('yellow', '500'),
@@ -18,4 +18,4 @@ $theme: (
     highlight-weight: normal,
 );
 
-html, body { @include lia($theme, light); }
+@include create-theme($theme, purple);
