--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,6 @@
-@import "_themes/light";
-@import "_themes/dark";
+@import "_themes/default";
+@import "_themes/amber";
+@import "_themes/green";
+@import "_themes/purple";
+@import "_themes/grey";
+@import "_themes/blue";
