--- a/scss/_lia.scss
+++ b/scss/_lia.scss
@@ -33,7 +33,7 @@
         width: 100%;
         height: 100%;
         font-family: "Roboto";
-        overflow-x: hidden;
+        overflow: hidden;
 
         * {
             box-sizing: border-box;
