Fix radio and checkbox in firefox

--- a/scss/_controls.scss
+++ b/scss/_controls.scss
@@ -205,76 +205,75 @@
         }
     }
 
-    .lia-radio-btn {
+    input[type='radio'] {
         $bg: map-get($theme, background);
         $fg: color-contrast($bg);
         $snd: map-get($theme, secondary);
+        $outline: 2.5px;
 
-        outline: none;
-        width: 1.25em;
-        height: 1.25em;
-        margin-right: map-get($config, spacing-small);
+        // hide the input but have it still be clickable
+        opacity: 0;
         vertical-align: middle;
+        position: absolute;
+        width: calc(1em + #{$outline} * 2);
+        height: calc(1em + #{$outline} * 2);
+        margin-right: map-get($config, spacing-small);
 
-        &:hover {
-            cursor: pointer;
-        }
-
-        &::after {
-            content: "";
+        & + .lia-radio-btn {
+            margin: $outline;
+            clear: none;
+            vertical-align: middle;
             display: inline-block;
             box-sizing: border-box;
             border-radius: 50%;
-            margin-top: 1.5px;
-            margin-left: 1.5px;
-            margin-bottom: -1.5px;
-            margin-right: -1.5px;
             border: 0.5em solid $bg;
             background: $bg;
-            box-shadow: 0 0 0 2.5px mix($bg, $fg, 50%);
-            width: calc(100% - 3px);
-            height: calc(100% - 3px);
+            box-shadow: 0 0 0 $outline mix($bg, $fg, 50%);
+            width: 1em;
+            height: 1em;
             transition-property: background, box-shadow, border;
             transition-duration: 0.25s;
             transition-timing-function: ease-in;
         }
 
-        &:checked::after {
-            box-shadow: 0 0 0 2.5px $snd;
+        &:hover {
+            cursor: pointer;
+        }
+
+        &:checked + .lia-radio-btn {
+            box-shadow: 0 0 0 $outline $snd;
             background: $snd;
             border: 3px solid $bg;
         }
     }
 
-    .lia-check-btn {
+    input[type='checkbox'] {
         $bg: map-get($theme, background);
         $fg: color-contrast($bg);
         $snd: map-get($theme, secondary);
+        $outline: 2.5px;
 
-        outline: none;
-        width: 1.25em;
-        height: 1.25em;
-        margin-right: map-get($config, spacing-small);
+        // hide the input but have it still be clickable
+        opacity: 0;
         vertical-align: middle;
+        position: absolute;
+        width: calc(1em + #{$outline} * 2);
+        height: calc(1em + #{$outline} * 2);
+        margin-right: map-get($config, spacing-small);
 
-        &:hover {
-            cursor: pointer;
-        }
-
-        &::after {
-            @include material-icon("check", inherit);
+        & + .lia-check-btn {
+            @include material-icon("", inherit);
+            margin: $outline;
+            clear: none;
+            vertical-align: middle;
             font-weight: 600;
             overflow: hidden;
             box-sizing: border-box;
             border-radius: map-get($config, spacing-tiny);
-            margin-top: 1.5px;
-            margin-left: 1.5px;
-            margin-bottom: -1.5px;
-            margin-right: -1.5px;
             border: 0.5em solid $bg;
-            box-shadow: 0 0 0 2.5px mix($bg, $fg, 50%);
-            width: calc(100% - 3px);
-            height: calc(100% - 3px);
+            box-shadow: 0 0 0 $outline mix($bg, $fg, 50%);
+            width: 1em;
+            height: 1em;
             background: $bg;
             color: color-contrast($snd);
             transition-property: background, box-shadow, border;
@@ -282,8 +281,12 @@
             transition-timing-function: ease-in;
         }
 
-        &:checked::after {
-            box-shadow: 0 0 0 2.5px $snd;
+        &:hover {
+            cursor: pointer;
+        }
+
+        &:checked + .lia-check-btn {
+            box-shadow: 0 0 0 $outline $snd;
             border: 0px solid $snd;
             background: $snd;
         }
