--- a/scss/_lia.scss
+++ b/scss/_lia.scss
@@ -46,6 +46,10 @@
         .lia-variant-dark {
             @include _new-theme($dark, $theme-name);
         }
+
+        .lia-icon {
+          @include material-icon("", inherit);
+        }
     }
 }
 
