--- a/scss/_controls.scss
+++ b/scss/_controls.scss
@@ -88,25 +88,35 @@
 
     .lia-btn {
         $bg: map-get($theme, primary);
-        $fg: color-contrast(map-get($theme, primary));
+        $fg: color-contrast($bg);
 
         border: none;
         border-radius: map-get($config, spacing-smaller);
-        background: $bg;
-        color: $fg;
         outline: none;
         position: relative;
         overflow: hidden;
-        box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),
-                    0 2px 2px 0    rgba(0,0,0,.14),
-                    0 1px 5px 0    rgba(0,0,0,.12);
         transition: background 0.25s ease-in 0s;
         padding: 0 map-get($config, spacing-large);
         line-height: 2em;
 
-        &:hover {
-            cursor: pointer;
-            background: mix($bg, $fg, 90%);
+        &:not([disabled]) {
+            background: $bg;
+            color: $fg;
+            box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),
+                        0 2px 2px 0    rgba(0,0,0,.14),
+                        0 1px 5px 0    rgba(0,0,0,.12);
+
+            &:hover {
+                cursor: pointer;
+                background: mix($bg, $fg, 90%);
+            }
+        }
+
+        &[disabled] {
+            $fg: color-contrast(map-get($theme, background));
+
+            background: rgba($fg, .12);
+            color: rgba($fg, .38);
         }
 
         .lia-ripple {
@@ -193,8 +203,15 @@
         .lia-input,
         .lia-select {
             background: $bg;
-            color: $fg;
             border-bottom-color: mix($bg, $fg, 50%);
+
+            &:not([disabled]) {
+                color: $fg;
+            }
+
+            &[disabled] {
+                color: rgba($fg, .38);
+            }
 
             &:focus {
                 border-bottom-color: $fg;
@@ -221,11 +238,19 @@
         $fg: color-contrast($bg);
 
         background: $bg;
-        color: $fg;
         border: none;
         outline: none;
-        border-bottom: 1.5px solid mix($bg, $fg, 50%);
         transition: border-bottom-color 0.5s ease-out 0s;
+
+        &:not([disabled]) {
+            color: $fg;
+            border-bottom: 1.5px solid mix($bg, $fg, 50%);
+        }
+
+        &[disabled] {
+            color: rgba($fg, .38);
+            border-bottom: 1.5px dotted mix($bg, $fg, 50%);
+        }
 
         &:focus {
             border-bottom-color: map-get($theme, primary);
@@ -263,7 +288,7 @@
             transition-timing-function: ease-in;
         }
 
-        &:hover {
+        &:not([disabled]):hover {
             cursor: pointer;
         }
 
@@ -271,6 +296,13 @@
             box-shadow: 0 0 0 $outline $snd;
             background: $snd;
             border: 3px solid $bg;
+        }
+
+        &[disabled]:checked + .lia-radio-btn {
+            $snd: rgba($fg, .38);
+
+            box-shadow: 0 0 0 $outline $snd;
+            background: $snd;
         }
     }
 
@@ -308,11 +340,19 @@
             transition-timing-function: ease-in;
         }
 
-        &:hover {
+        &:not([disabled]):hover {
             cursor: pointer;
         }
 
         &:checked + .lia-check-btn {
+            box-shadow: 0 0 0 $outline $snd;
+            border: 0px solid $snd;
+            background: $snd;
+        }
+
+        &[disabled]:checked + .lia-check-btn {
+            $snd: rgba($fg, .38);
+
             box-shadow: 0 0 0 $outline $snd;
             border: 0px solid $snd;
             background: $snd;
@@ -361,6 +401,44 @@
                 background: $row-odd-bg;
                 color: $row-odd-fg;
             }
+        }
+    }
+
+    .lia-card {
+        margin: map-get($config, spacing-large);
+        padding: map-get($config, spacing-normal);
+        border-radius: 2px;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+        div:last-child {
+            text-align: right;
+        }
+
+        .lia-check-item,
+        .lia-radio-item,
+        .lia-survey-matrix {
+            padding: map-get($config, spacing-normal);
+        }
+    }
+
+    .lia-survey-matrix {
+        border-spacing: 0 map-get($config, spacing-large);
+
+        :not(:first-child) {
+            td:last-child {
+                padding: map-get($config, spacing-normal) map-get($config, spacing-large);
+            }
+
+            td:not(:last-child) {
+                $bg: map-get($theme, background);
+                $fg: color-contrast($bg);
+                background: mix($bg, $fg, 95%);
+                padding: map-get($config, spacing-normal);
+            }
+        }
+
+        :first-child td {
+            padding: 0 map-get($config, spacing-normal);
         }
     }
 }
