--- a/scss/_themes/_amber.scss
+++ b/scss/_themes/_amber.scss
@@ -7,10 +7,10 @@ $bg: material-color('grey', '50');
 $theme: (
     text: $fg,
     text-inv: $bg,
-    background: material-color('amber', '400'),
-    background-inv: material-color('brown', '900'),
-    primary: material-color('deep-orange', '500'),
-    secondary: material-color('red', '500'),
+    background: $bg,
+    background-inv: $fg,
+    primary: material-color('amber', '500'),
+    secondary: material-color('deep-orange', '500'),
     success: material-color('green', '500'),
     info: material-color('blue', '500'),
     warning: material-color('yellow', '500'),
