--- a/scss/_themes/_green.scss
+++ b/scss/_themes/_green.scss
@@ -7,11 +7,11 @@ $bg: material-color('grey', '50');
 $theme: (
     text: $fg,
     text-inv: $bg,
-    background: material-color('light-green', '100'),
-    background-inv: material-color('light-green', '900'),
-    primary: material-color('light-green', '600'),
-    secondary: material-color('amber', '600'),
-    success: material-color('green', '500'),
+    background: $bg,
+    background-inv: $fg,
+    primary: material-color('green', '500'),
+    secondary: material-color('lime', '500'),
+    success: material-color('light-green', '500'),
     info: material-color('blue', '500'),
     warning: material-color('yellow', '500'),
     error: material-color('red', '500'),
