--- a/scss/_slide.scss
+++ b/scss/_slide.scss
@@ -35,7 +35,7 @@
                 right: map-get($config, spacing-huge);
                 bottom: map-get($config, spacing-huge);
                 padding: map-get($config, spacing-large);
-                background: $bg;
+                background: rgba($bg, .7);
                 color: color-contrast($bg);
                 animation: show-comment .25s ease-in-out 0s;
 
