--- a/scss/_toc.scss
+++ b/scss/_toc.scss
@@ -117,6 +117,10 @@
                     }
                 }
 
+                &.lia-not-visited {
+                    color: darken($fg, 30%);
+                }
+
                 &.lia-toc-l {
                     &1 { padding-left: 0 * map-get($config, spacing-large) + map-get($config, spacing-normal); }
                     &2 { padding-left: 1 * map-get($config, spacing-large) + map-get($config, spacing-normal); }
