--- a/scss/_controls.scss
+++ b/scss/_controls.scss
@@ -133,6 +133,73 @@
         border-radius: map-get($config, spacing-small);
     }
 
+    .lia-color {
+      margin: 0px;
+      padding: 0px;
+      float: left;
+      width: 100%;
+
+      label {
+        float: left;
+        width: 85px;
+        height: 34px;
+        margin: 4px;
+        background-color: #EFEFEF;
+        border-radius: 4px;
+        border: 0px;
+        overflow: auto;
+
+        box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),
+                    0 2px 2px 0    rgba(0,0,0,.14),
+                    0 1px 5px 0    rgba(0,0,0,.12);
+
+        span {
+          text-align: center;
+          padding: 8px 0px;
+          display: block;
+        }
+        input {
+          position: absolute;
+          top: -9px;
+        }
+
+        &:hover {
+            cursor: pointer;
+            background: #404040;
+            color: #F7F7F7;
+        }
+      }
+      input:checked + span {
+        background-color: #404040;
+        color: #F7F7F7;
+      }
+      .default {
+        background-color: #3f51b5;
+        color: #333;
+      }
+      .amber {
+        background-color: #FFC107;
+        color: #333;
+      }
+      .blue {
+        background-color: #2196f3;
+        color: #333;
+      }
+      .green {
+        background-color: #4caf50;
+        color: #333;
+      }
+      .gray {
+        background-color: #607d8b;
+        color: #333;
+      }
+      .purple {
+        background-color: #673ab7;
+        color: #333;
+      }
+
+    }
+
     .lia-label {
       white-space: nowrap;
     }
