--- a/scss/_controls.scss
+++ b/scss/_controls.scss
@@ -232,7 +232,10 @@
     }
 
     .lia-label {
-      white-space: nowrap;
+      //white-space: nowrap;
+      word-wrap: normal;
+      word-break: keep-all;
+      white-space: pre-wrap;
     }
 
     .lia-btn,
