--- a/scss/_controls.scss
+++ b/scss/_controls.scss
@@ -519,7 +519,7 @@
     }
 
     .lia-card {
-        margin: map-get($config, spacing-large);
+        //margin: map-get($config, spacing-small);
         padding: map-get($config, spacing-normal);
         border-radius: 2px;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
